--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Troy Martin" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,700,800,900|Open+Sans:400,600|Roboto:400,500,700" rel="stylesheet">
-    <link href="_styles/styles.css" rel="stylesheet" />
+    <link href="styles/styles.css" rel="stylesheet" />
     <title>Hannah Martin</title>
 </head>
 
@@ -37,7 +37,7 @@
                 <div class="content__frame content__frame--left">
                     <div class="content__frame__photo">
                         <figure>
-                            <img src="_images/education.JPG" alt="Education" title="Hannah marching to the stadium with the UNL Marching band." />
+                            <img src="images/education.JPG" alt="Education" title="Hannah marching to the stadium with the UNL Marching band." />
                             <figcaption>UNL Marching Band</figcaption>
                         </figure>
                     </div>
@@ -55,7 +55,7 @@
             <div class="content">
                 <div class="content__frame content__frame--right">
                     <figure>
-                        <img src="_images/experience.jpg" alt="Experience" title="Hannah and her Beninese host mother." />
+                        <img src="images/experience.jpg" alt="Experience" title="Hannah and her Beninese host mother." />
                         <figcaption>Beninese host Mother</figcaption>
                     </figure>                    
                 </div>
@@ -74,7 +74,7 @@
             <div class="content">
                 <div class="content__frame content__frame--left">
                     <figure>
-                        <img src="_images/certification.jpg" alt="Certifications" title="Hannah and students." />
+                        <img src="images/certification.jpg" alt="Certifications" title="Hannah and students." />
                         <figcaption>Hannah and students</figcaption>
                     </figure>                     
                 </div>
@@ -93,7 +93,7 @@
             <div class="content">
                 <div class="content__frame content__frame--right">
                     <figure>
-                        <img src="_images/traveler.jpg" alt="Hobbies" title="Off on a trip" />
+                        <img src="images/traveler.jpg" alt="Hobbies" title="Off on a trip" />
                         <figcaption>Off on a trip</figcaption>
                     </figure>                      
                 </div>
@@ -108,7 +108,7 @@
             <div class="content">
                 <div class="content__frame content__frame--left">
                     <figure>
-                        <img src="_images/info.png" alt="Information" title="Information" />
+                        <img src="images/info.png" alt="Information" title="Information" />
                         <figcaption>More information</figcaption>
                     </figure>  
                 </div>
