--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="content__frame content__frame--left">
                     <div class="content__frame__photo">
                         <figure>
-                            <img src="images/education.JPG" alt="Education" title="Hannah marching to the stadium with the UNL Marching band." />
+                            <img src="images/education.jpg" alt="Education" title="Hannah marching to the stadium with the UNL Marching band." />
                             <figcaption>UNL Marching Band</figcaption>
                         </figure>
                     </div>
