--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div class="banner__title">Hannah Martin</div>
             <div class="banner__highlights">
                 <ul>
-                    <li>Volunteer</li>
-                    <li>Teacher</li>
-                    <li>Traveler</li>
-                    <li>Student</li>
-                    <li>Runner</li>
-                    <li>Cooking</li>
-                    <li>Musician</li>
+                    <li><a href="#experience">Volunteer</a></li>
+                    <li><a href="#experience">Teacher</a></li>
+                    <li><a href="#hobbies">Traveler</a></li>
+                    <li><a href="#education">Student</a></li>
+                    <li><a href="#hobbies">Runner</a></li>
+                    <li><a href="#hobbies">Cooking</a></li>
+                    <li><a href="#education">Musician</a></li>
                 </ul>                
             </div>
 
@@ -42,7 +42,7 @@
                         </figure>
                     </div>
                 </div>
-                <div class="content__copy">
+                <div id="education" class="content__copy">
                     <h2>Education</h2>
                     <p>In 2015 Hannah graduated from the University of Nebraska Lincoln with a bachelor’s degree in both Psychology
                         and French. During college she volunteered teaching English to adults through the Lincoln
@@ -59,7 +59,7 @@
                         <figcaption>Beninese host Mother</figcaption>
                     </figure>                    
                 </div>
-                <div class="content__copy">
+                <div id="experience" class="content__copy">
                     <h2>Experience</h2>
                     <p>After college Hannah applied and was accepted into the Peace Corps. She was stationed in Benin Africa from
                         June of 2016 to August of 2018. In Benin Hannah lived in a small village in the northern part of the
@@ -78,7 +78,7 @@
                         <figcaption>Hannah and students</figcaption>
                     </figure>                     
                 </div>
-                <div class="content__copy">
+                <div id="certifications" class="content__copy">
                     <h2>Certifications</h2>
                     <p>From her teaching experience in the Peace Corps Hannah earned her TEFL certification. TEFL stands for Teach
                         English as a Foreign Language. Hannah continues to teach adults English part-time through Metropolitan
@@ -97,7 +97,7 @@
                         <figcaption>Off on a trip</figcaption>
                     </figure>                      
                 </div>
-                <div class="content__copy">
+                <div id="hobbies" class="content__copy">
                     <h2>Hobbies</h2>
                     <p>In her spare time Hannah enjoys cooking, video games, reading and playing with the family dog Millie. Hannah also likes
                         to run and has completed two half marathons. Besides Benin she has been fortunate to have visited
