Copy update week 6

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#hobbies">Traveler</a></li>
                     <li><a href="#education">Student</a></li>
                     <li><a href="#hobbies">Runner</a></li>
-                    <li><a href="#hobbies">Cooking</a></li>
+                    <li><a href="#hobbies">Knitter</a></li>
                     <li><a href="#education">Musician</a></li>
                 </ul>                
             </div>
@@ -110,9 +110,10 @@
                 </div>
                 <div id="hobbies" class="content__copy">
                     <h2>Hobbies</h2>
-                    <p>In her spare time, Hannah enjoys cooking, video games, reading and playing with the family dog Millie. Hannah also likes to run and has 
+                    <p>In her spare time, Hannah enjoys knitting, cooking, video games, reading and playing with the family dog Millie. Hannah also likes to run and has 
                         finished several half marathons and is looking to complete several more. Besides Benin, she has been fortunate to have traveled to several 
                         other countries including Spain, France, Togo, and Ghana. Other countries she would like to visit include: Australia, New Zealand, Germany, Argentina, and South Africa.
+                        Hannah enjoys knitting scarves, stocking hats and has even knitted mittens.
                     </p>
                     <p>
                         <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
