--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#hobbies">Traveler</a></li>
                     <li><a href="#education">Student</a></li>
                     <li><a href="#hobbies">Runner</a></li>
-                    <li><a href="#hobbies">Knitter</a></li>
+                    <li><a href="#hobbies">Gamer</a></li>
                     <li><a href="#education">Musician</a></li>
                 </ul>                
             </div>
@@ -48,7 +48,7 @@
                         and French. During college she volunteered teaching English to adults through the Lincoln
                         Literacy Program was a member of the Alpha Xi Delta sorority and played clarinet in the marching
                         band.</p>
-                    <p>Hannah has recently enrolled in courses to continue her education. She has begun working on her Master's degree in Public Health.</p>
+                    <p>Hannah has recently enrolled in courses to continue her education. She will be working on her Master's degree in Public Health.</p>
                     <p>
                         <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
                     </p>
@@ -113,7 +113,8 @@
                     <p>In her spare time, Hannah enjoys knitting, cooking, video games, reading and playing with the family dog Millie. Hannah also likes to run and has 
                         finished several half marathons and is looking to complete several more. Besides Benin, she has been fortunate to have traveled to several 
                         other countries including Spain, France, Togo, and Ghana. Other countries she would like to visit include: Australia, New Zealand, Germany, Argentina, and South Africa.
-                        Hannah enjoys knitting scarves, stocking hats and has even knitted mittens.
+                        Hannah enjoys knitting scarves, stocking hats and has even knitted mittens. Her favorite video games are all based on the Star Wars movies. Lego Star Wars,
+                        Stars Wars Battlefront and the Jedi Knight games.
                     </p>
                     <p>
                         <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
