change up arrow to fa week 6

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Troy Martin" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,700,800,900|Open+Sans:400,600|Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="styles/styles.css" rel="stylesheet" />
     <title>Hannah Martin</title>
 </head>
@@ -50,7 +51,7 @@
                         band.</p>
                     <p>Hannah has recently enrolled in courses to continue her education. She will be working on her Master's degree in Public Health.</p>
                     <p>
-                        <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
+                        <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                     </p>
                 </div>
             </div>
@@ -72,7 +73,7 @@
                         empower young women in the community.
                     </p>
                     <p>
-                        <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
+                        <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                     </p>
                 </div>
 
@@ -95,7 +96,7 @@
                         <li><a class="info" href="https://www.tefl.org/us/" title="TEFL" target="_blank">tefl.org</a></li>
                     </ul>
                     <p>
-                        <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
+                        <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                     </p>
                 </div>
 
@@ -117,7 +118,7 @@
                         Stars Wars Battlefront and the Jedi Knight games.
                     </p>
                     <p>
-                        <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
+                        <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
                     </p>
                 </div>
 
@@ -143,7 +144,7 @@
                         <li><a class="info" href="https://goo.gl/maps/iEL6rnawn5A2" title="Google Map of Benin" target="_blank">Google Map of Benin</a></li>
                     </ul>
                     <p>
-                        <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><img src="images/top.png" /></a></div>
+                        <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
                     </p>
                 </div>
 
