Week 8 change div to article and aside. Fix float width issues

--- a/index.html
+++ b/index.html
@@ -37,100 +37,92 @@
             </div>
         </header>
         <main>
-            <!-- content container -->
-            <div class="content">
-                <!-- photo container, left justified, provides background color -->
-                <div class="content__frame content__frame--left">
-                    <!-- container for the photo -->
+            <!-- article provides parent container -->
+            <article id="education">
+                <!-- aside provides container for photo -->
+                <aside>
+                    <!-- provide purple background for image -->
                     <div class="content__frame__photo">
                         <figure>
                             <img src="images/education.jpg" alt="Education" title="Hannah marching to the stadium with the UNL Marching band." />
-                            <!-- photo caption -->
                             <figcaption>UNL Marching Band</figcaption>
                         </figure>
                     </div>
-                </div>
-                <!-- content -->
-                <div id="education" class="content__copy">
+                </aside>
+                <div class="content__copy">
                     <h2>Education</h2>
                     <p>In 2015 Hannah graduated from the University of Nebraska Lincoln with a bachelor’s degree in
-                        both Psychology and French. During college she volunteered teaching English to adults through the Lincoln
-                        Literacy Program was a member of the Alpha Xi Delta sorority and played clarinet in the marching band.</p>
+                        both Psychology and French. During college she volunteered teaching English to adults through
+                        the Lincoln Literacy Program was a member of the Alpha Xi Delta sorority and played clarinet in the marching band.</p>
                     <p>Hannah has recently enrolled in courses to continue her education. She will be working on her Master's degree in Public Health.</p>
-                    <!-- return to top -->
                     <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
-            </div>
+            </article>
 
-            <div class="content">
-                <div class="content__frame content__frame--right">
+            <article id="experience">
+                <aside class="aside--right">
                     <figure>
                         <img src="images/experience.jpg" alt="Experience" title="Hannah and her Beninese host mother." />
                         <figcaption>Beninese host Mother</figcaption>
                     </figure>
-                </div>
-                <div id="experience" class="content__copy">
+                </aside>
+                <div class="content__copy--right">
                     <h2>Experience</h2>
                     <p>After college Hannah applied and was accepted into the Peace Corps. She was stationed in Benin
-                        Africa from June of 2016 to August of 2018. In Benin Hannah lived in a small village in the northern part
-                        of the country and taught the equivalent of middle school English. While in Benin she participated or
-                        organized several community projects such as: hand washing stations at the school, a mural of
+                        Africa from June of 2016 to August of 2018. In Benin Hannah lived in a small village in the
+                        northern part of the country and taught the equivalent of middle school English. While in Benin she
+                        participated or organized several community projects such as: hand washing stations at the school, a mural of
                         the globe painted on a school wall, English club, regional teacher training and sponsoring events
                         to empower young women in the community.
                     </p>
                     <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
+            </article>
 
-            </div>
-
-            <div class="content">
-                <div class="content__frame content__frame--left">
+            <article id="certifications">
+                <aside>
                     <figure>
                         <img src="images/certification.jpg" alt="Certifications" title="Hannah and students." />
                         <figcaption>Hannah and students</figcaption>
                     </figure>
-                </div>
-                <div id="certifications" class="content__copy">
+
+                </aside>
+                <div class="content__copy">
                     <h2>Certifications</h2>
                     <p>From her teaching experience in the Peace Corps Hannah earned her TEFL certification. TEFL
-                        stands for Teach English as a Foreign Language. Hannah continues to teach adults English part-time through
-                        Metropolitan Community College.</p>
+                        stands for Teach English as a Foreign Language. Hannah continues to teach adults English
+                        part-time through Metropolitan Community College.</p>
                     <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
+            </article>
 
-            </div>
-
-            <div class="content">
-                <div class="content__frame content__frame--right">
+            <article id="hobbies">
+                <aside class="aside--right">
                     <figure>
                         <img src="images/traveler.jpg" alt="Hobbies" title="Off on a trip" />
                         <figcaption>Off on a trip</figcaption>
                     </figure>
-                </div>
-                <div id="hobbies" class="content__copy">
+                </aside>
+                <div class="content__copy--right">
                     <h2>Hobbies</h2>
                     <p>In her spare time, Hannah enjoys knitting, cooking, video games, reading and playing with the
-                        family dog Millie. Hannah also likes to run and has
-                        finished several half marathons and is looking to complete several more. Besides Benin, she has
-                        been fortunate to have traveled to several
-                        other countries including Spain, France, Togo, and Ghana. Other countries she would like to
-                        visit include: Australia, New Zealand, Germany, Argentina, and South Africa.
-                        Hannah enjoys knitting scarves, stocking hats and has even knitted mittens. Her favorite video
-                        games are all based on the Star Wars movies. Lego Star Wars,
-                        Stars Wars Battlefront and the Jedi Knight games.
+                        family dog Millie. Hannah also likes to run and has finished several half marathons and is looking to complete several more. Besides Benin, she has
+                        been fortunate to have traveled to several other countries including Spain, France, Togo, and Ghana. Other countries she would like to
+                        visit include: Australia, New Zealand, Germany, Argentina, and South Africa. Hannah enjoys knitting scarves, stocking hats and has even knitted mittens. Her favorite video
+                        games are all based on the Star Wars movies. Lego Star Wars, Stars Wars Battlefront and the Jedi Knight games.
                     </p>
                     <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
                 </div>
 
-            </div>
+            </article>
 
-            <div class="content">
-                <div class="content__frame content__frame--left">
+            <article>
+                <aside>
                     <figure>
                         <img src="images/info.png" alt="Information" title="Information" />
                         <figcaption>More information</figcaption>
                     </figure>
-                </div>
+                </aside>
                 <div class="content__copy">
                     <ul class="list--color">
                         <li><a class="list__anchor--color" href="https://www.peacecorps.gov/about/history/" title="About the Peace Corps" target="_blank">About the Peace Corps <i class="fas fa-xs fa-external-link-alt"></i></a></li>
@@ -143,7 +135,7 @@
                     <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
                 </div>
 
-            </div>
+            </article>
         </main>
         <footer class="footer">
             Developed by martint
