Week 8 remove alt from anchors

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         both Psychology and French. During college she volunteered teaching English to adults through
                         the Lincoln Literacy Program was a member of the Alpha Xi Delta sorority and played clarinet in the marching band.</p>
                     <p>Hannah has recently enrolled in courses to continue her education. She will be working on her Master's degree in Public Health.</p>
-                    <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
+                    <div class="content__button content__button--right"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
             </article>
 
@@ -75,7 +75,7 @@
                         the globe painted on a school wall, English club, regional teacher training and sponsoring events
                         to empower young women in the community.
                     </p>
-                    <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
+                    <div class="content__button content__button--left"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
             </article>
 
@@ -92,7 +92,7 @@
                     <p>From her teaching experience in the Peace Corps Hannah earned her TEFL certification. TEFL
                         stands for Teach English as a Foreign Language. Hannah continues to teach adults English
                         part-time through Metropolitan Community College.</p>
-                    <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
+                    <div class="content__button content__button--right"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
             </article>
 
@@ -111,7 +111,7 @@
                         visit include: Australia, New Zealand, Germany, Argentina, and South Africa. Hannah enjoys knitting scarves, stocking hats and has even knitted mittens. Her favorite video
                         games are all based on the Star Wars movies. Lego Star Wars, Stars Wars Battlefront and the Jedi Knight games.
                     </p>
-                    <div class="content__button content__button--left"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
+                    <div class="content__button content__button--left"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
                 </div>
 
             </article>
@@ -132,7 +132,7 @@
                         <li><a class="list__anchor--color" class="info" href="https://goo.gl/maps/iEL6rnawn5A2" title="Google Map of Benin" target="_blank">Google Map of Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                         <li><a class="list__anchor--color" class="info" href="https://www.tefl.org/us/" title="TEFL" target="_blank">More about TEFL certification <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                     </ul>
-                    <div class="content__button content__button--right"><a href="#container" alt="Top" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
+                    <div class="content__button content__button--right"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
                 </div>
 
             </article>
