--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         visit include: Australia, New Zealand, Germany, Argentina, and South Africa. Hannah enjoys knitting scarves, stocking hats and has even knitted mittens. Her favorite video
                         games are all based on the Star Wars movies. Lego Star Wars, Stars Wars Battlefront and the Jedi Knight games.
                     </p>
-                    <div class="content__button content__button--left"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
+                    <div class="content__button content__button--left"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
 
             </article>
@@ -132,7 +132,7 @@
                         <li><a class="list__anchor--color" class="info" href="https://goo.gl/maps/iEL6rnawn5A2" title="Google Map of Benin" target="_blank">Google Map of Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                         <li><a class="list__anchor--color" class="info" href="https://www.tefl.org/us/" title="TEFL" target="_blank">More about TEFL certification <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                     </ul>
-                    <div class="content__button content__button--right"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></div>
+                    <div class="content__button content__button--right"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
 
             </article>
