Week 8 fix link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="banner__highlights">
                 <ul>
                     <li><a href="#experience">Volunteer</a></li>
-                    <li><a href="#experience">Teacher</a></li>
+                    <li><a href="#certifications">Teacher</a></li>
                     <li><a href="#hobbies">Traveler</a></li>
                     <li><a href="#education">Student</a></li>
                     <li><a href="#hobbies">Runner</a></li>
