Week 8 remove duplicate class tag

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                         <li><a class="list__anchor--color" href="https://www.peacecorps.gov/benin/" title="History of the Peace Corps in Benin" target="_blank">History of the Peace Corps in Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                         <li><a class="list__anchor--color" href="https://www.britannica.com/place/Benin" title="Benin" target="_blank">Encyclopedia Britannica Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                         <li><a class="list__anchor--color" href="https://www.bbc.com/news/world-africa-13037572" title="BBC News Benin" target="_blank">BBC News information on Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
-                        <li><a class="list__anchor--color" class="info" href="https://goo.gl/maps/iEL6rnawn5A2" title="Google Map of Benin" target="_blank">Google Map of Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
-                        <li><a class="list__anchor--color" class="info" href="https://www.tefl.org/us/" title="TEFL" target="_blank">More about TEFL certification <i class="fas fa-xs fa-external-link-alt"></i></a></li>
+                        <li><a class="list__anchor--color" href="https://goo.gl/maps/iEL6rnawn5A2" title="Google Map of Benin" target="_blank">Google Map of Benin <i class="fas fa-xs fa-external-link-alt"></i></a></li>
+                        <li><a class="list__anchor--color" href="https://www.tefl.org/us/" title="TEFL" target="_blank">More about TEFL certification <i class="fas fa-xs fa-external-link-alt"></i></a></li>
                     </ul>
                     <div class="content__button content__button--right"><a href="#container" title="Back to top"><i class="fas fa-lg fa-chevron-up"></i></a></div>
                 </div>
