Week 8 add additional comments

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Control the size of the viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- How IE should render the page -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="assignment" content="Bio Site" />
     <meta name="keywords" content="hannah, hannah martin, education, peace corps, benin, english, teach" />
     <meta name="author" content="Troy Martin" />
+    <!-- Icon displayed on browser tab -->
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,500,700,800,900|Open+Sans:400,600|Roboto:400,500,700" rel="stylesheet">
+    <!-- fontawesome used for icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <!-- custom style sheet for the site -->
     <link href="styles/styles.css" rel="stylesheet" />
